2007-01-07 zunda <zunda at freeshell.org>
	* plugin/00default.rb: escaped arguments to navi_item

2007-01-07 zunda <zunda at freeshell.org>
	* plugin/en/00default.rb: fixed typo: s/@.update/@update/

2007-01-08 TADA Tadashi <sho@spc.gr.jp>
	* index.rb: support ETag and If-None-Match header, and delete cache control
	from GET response.

2007-01-07 zunda <zunda at freeshell.org>
	* skel/plugin_error.rb: modified to show error message in <pre>

2007-01-06 TADA Tadashi <sho@spc.gr.jp>
	* apply HTML escape when generate HTML in skeltons or plugins.

2006-12-28 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/spam.rb: fix error on logging when no 'date' parameter (again).

2006-12-27 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/spam.rb: fix error on logging when no 'date' parameter.

2006-12-20 zunda <zunda at freeshell.org>
	* tdiary/filter/spam.rb: add date of rejected tsukkomi to debug log

2006-12-10 TADA Tadashi <sho@spc.gr.jp>
	* skel/conf.rhtml, skel/i.conf.rhtml: security fix: escape @key value.

2006-12-05 zunda <zunda at freeshell.org>
	* index.rb, update.rb: escape HTML for error page.

2006-12-04 HASHIMOTO Keisuke <ksk at be.to>
	* plugin/00default.rb: change 'theme' to '#{theme}': position of help icon.

2006-11-28 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix error when no 'conf' parameter in preferences page.

2006-11-26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, skel/conf.rhtml: security fix: escape HTML for conf parameter
	in update.rb.

2006-11-15  Tanaka Akira <akr at fsij.org>
	* tdiary/wiki_style.rb: check plugin syntax in $SAFE=4.

2006-11-13  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/wiki_style.rb: rescue SecurityError.
	* tdiary/hikidoc.rb: sync with hikidoc rev.43.
	  use Syntax library in multi-pre if possible

2006-11-11  Tanaka Akira <akr at fsij.org>
	* tdiary/wiki_style.rb: support here document ends without CR/LF in plugin.
 
2006-11-10 TADA Tadashi <sho@spc.gr.jp>
	* style/wiki_style.rb: fix bug when plugin specified in subtitle.
