@@ -1,3 +1,6 @@
+2007-01-09  Kazuhiko  <kazuhiko@fdiary.net>
+	* plugin/00default.rb: remove parentheses warnings.
+
 2007-01-07 zunda <zunda at freeshell.org>
 	* plugin/00default.rb: escaped arguments to navi_item
 
